<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="4dp" app:cardElevation="4dp" android:layout_margin="6dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/poster_missing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPosterMissing"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="@+id/ivPoster"
                    app:layout_constraintEnd_toEndOf="@+id/ivPoster"
                    app:layout_constraintStart_toStartOf="@+id/ivPoster"
                    app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
                    android:gravity="center"
                    android:textColor="@color/colorTextSecondary"/>

            <ImageView
                    android:id="@+id/ivPoster"
                    android:contentDescription="@string/poster_of_a_movie"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    app:layout_constraintDimensionRatio="H,27:40"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pbPoster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
                    app:layout_constraintTop_toTopOf="@+id/ivPoster"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitle"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivPoster" android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp" android:layout_marginTop="4dp" android:text="@string/title"
                    android:textColor="@color/colorTextPrimary" android:layout_marginStart="4dp"/>

            <TextView
                    android:text="@string/released"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvReleasedOn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginLeft="4dp"
                    android:layout_marginBottom="4dp" android:layout_marginTop="4dp" android:textSize="12sp"
                    android:textColor="@color/colorTextSecondary" android:layout_marginStart="4dp"/>

            <TextView
                    android:text="@string/jan_1_2000"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvReleaseDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvReleasedOn"
                    app:layout_constraintTop_toTopOf="@+id/tvReleasedOn"
                    app:layout_constraintBottom_toBottomOf="@+id/tvReleasedOn"
                    android:layout_marginRight="4dp" android:textSize="12sp"
                    android:textColor="@color/colorTextSecondary" android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>